
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deriv-pricing"
version = "0.1.0"
description = "Mini project for derivatives pricing: payoff, binomial tree, Monte Carlo, and Greeks."
authors = [{name="Your Name"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "jupyter>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "black>=24.3",
    "ipykernel>=6.29",
]

[tool.black]
line-length = 100
target-version = ["py39","py310","py311","py312"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
